# EduBook_python

./: .env  .gitignore  Image.db  db.py  imagedb.py  main.py  model.py  pyproject.toml  test_main.http  upload.py  user.db
database/: image.db  user.db
database/handler/: imagedb.py  resultdb.py  userdb.py
util/: upload.py
